--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:background="@null"
         android:src="@drawable/mic"
         android:contentDescription="@string/imageMic" />
-
+<!--
     <fragment
         android:id="@+id/listFragment"
         android:layout_width="match_parent"
@@ -26,12 +26,12 @@
         android:name="com.tinker.balancesheet.OneFragment"
         android:layout_below="@+id/btnSpeak"
         tools:layout="@layout/one_fragment" />
-
+-->
     <TextView android:text="@string/hello_world"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textDisplay"
-        android:layout_below="@+id/listFragment" />
+        android:layout_below="@+id/btnSpeak" />
 
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -46,6 +46,20 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_below="@+id/pager"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:progressDrawable="@drawable/circular_progress_bar"
+
+        android:layout_alignTop="@+id/chart"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="62dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
