--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -14,10 +14,20 @@
     <ImageButton
         android:id="@+id/btnSpeak"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
-        android:background="@null"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_state"
         android:src="@drawable/mic"
-        android:contentDescription="@string/imageMic" />
+        android:contentDescription="@string/imageMic"
+        android:clickable="true"
+        android:backgroundTintMode="src_in"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/textDisplay"
+        android:layout_alignEnd="@+id/textDisplay"
+        android:layout_marginBottom="15dp"
+        style="@style/Base.Widget.AppCompat.Button"
+        />
 <!--
     <fragment
         android:id="@+id/listFragment"
@@ -27,12 +37,13 @@
         android:layout_below="@+id/btnSpeak"
         tools:layout="@layout/one_fragment" />
 -->
-    <TextView android:text="@string/hello_world"
+    <TextView android:text="@string/home_title_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textDisplay"
-        android:layout_below="@+id/btnSpeak" />
-
+        android:layout_below="@+id/btnSpeak"
+        android:layout_marginBottom="15dp" />
+<!--
     <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/pager"
@@ -40,12 +51,12 @@
         android:layout_height="150dp"
         tools:context=".MainActivity"
         android:layout_below="@+id/textDisplay" />
-
+-->
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/chart"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_below="@+id/pager"
+        android:layout_below="@+id/textDisplay"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
