--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
+
+    <AnalogClock
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/analogClock"
+        android:layout_gravity="center_horizontal" />
+
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="99dp"
+        android:id="@+id/datePickerLogin"
+        android:layout_gravity="center_horizontal"
+        android:spinnersShown="false"
+        android:backgroundTintMode="screen"
+        android:headerBackground="#2490fb" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select Account"
         android:id="@+id/select_account_btn"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:background="#2490fb"
+        android:textColor="#ffffff"
+        android:padding="5dp"
+        android:layout_marginTop="10dp"
+        android:typeface="monospace"
+        android:textStyle="bold" />
+
 </LinearLayout>
