--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,34 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:background="@android:color/darker_gray"
+    android:weightSum="1"
+    android:padding="16dp"
+    >
 
-    <AnalogClock
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/analogClock"
-        android:layout_gravity="center_horizontal" />
+        card_view:cardCornerRadius="4dp">
 
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="99dp"
-        android:id="@+id/datePickerLogin"
-        android:layout_gravity="center_horizontal"
-        android:spinnersShown="false"
-        android:backgroundTintMode="screen"
-        android:headerBackground="#2490fb" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select Account"
-        android:id="@+id/select_account_btn"
-        android:layout_gravity="center_horizontal"
-        android:background="#2490fb"
-        android:textColor="#ffffff"
-        android:padding="5dp"
-        android:layout_marginTop="10dp"
-        android:typeface="monospace"
-        android:textStyle="bold" />
+            <ImageView
+                android:id="@+id/select_account_btn_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_android_black_48dp"
+                android:layout_alignTop="@+id/select_account_btn"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginRight="20dp"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/select_account_btn_icon"
+                android:text="@string/select_account_btn"
+                android:id="@+id/select_account_btn"
+                android:layout_gravity="center_horizontal"
+                android:background="#2490fb"
+                android:textColor="#ffffff"
+                android:padding="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:typeface="monospace"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/select_account_desc"
+                android:layout_below="@+id/select_account_btn"
+                android:layout_alignLeft="@+id/select_account_btn_icon"
+                android:layout_alignStart="@+id/select_account_btn_icon" />
+
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
