--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,78 +1,95 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@android:color/darker_gray"
+    android:padding="16dp"
+    >
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
-    <ImageButton
-        android:id="@+id/btnSpeak"
-        android:layout_width="fill_parent"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_gravity="fill_vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_state"
-        android:src="@drawable/mic"
-        android:contentDescription="@string/imageMic"
-        android:clickable="true"
-        android:backgroundTintMode="src_in"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/textDisplay"
-        android:layout_alignEnd="@+id/textDisplay"
-        android:layout_marginBottom="15dp"
-        style="@style/Base.Widget.AppCompat.Button"
-        />
+        card_view:cardCornerRadius="4dp">
+
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            tools:context=".MainActivity">
 <!--
-    <fragment
-        android:id="@+id/listFragment"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:name="com.tinker.balancesheet.OneFragment"
-        android:layout_below="@+id/btnSpeak"
-        tools:layout="@layout/one_fragment" />
--->
-    <TextView android:text="@string/home_title_top"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textDisplay"
-        android:layout_below="@+id/btnSpeak"
-        android:layout_marginBottom="15dp" />
-<!--
-    <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/pager"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        tools:context=".MainActivity"
-        android:layout_below="@+id/textDisplay" />
--->
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/chart"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_below="@+id/textDisplay"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <ImageButton
+                android:id="@+id/btnSpeak"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_state"
+                android:src="@drawable/mic"
+                android:contentDescription="@string/imageMic"
+                android:clickable="true"
+                android:backgroundTintMode="src_in"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_alignRight="@+id/textDisplay"
+                android:layout_alignEnd="@+id/textDisplay"
+                android:layout_marginBottom="15dp"
+                style="@style/Base.Widget.AppCompat.Button"
+                />
+                -->
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:progressDrawable="@drawable/circular_progress_bar"
+        <!--
+            <fragment
+                android:id="@+id/listFragment"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:name="com.tinker.balancesheet.OneFragment"
+                android:layout_below="@+id/btnSpeak"
+                tools:layout="@layout/one_fragment" />
+        -->
+            <TextView android:text="@string/home_title_top"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textDisplay"
+                android:layout_marginBottom="15dp"
+                android:textSize="20dp" />
+        <!--
+            <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                tools:context=".MainActivity"
+                android:layout_below="@+id/textDisplay" />
+        -->
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chart"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_below="@+id/textDisplay"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
 
-        android:layout_alignTop="@+id/chart"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="62dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+            <ProgressBar
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBar"
+                android:progressDrawable="@drawable/circular_progress_bar"
 
-</RelativeLayout>
+                android:layout_alignTop="@+id/chart"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="62dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.CardView>
+
 </ScrollView>
