- Change package name. - Add unit test to TargetTableParameter. More coming soon - Refactor MainActivity and took out account selector methods to another class.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                 android:id="@+id/listFragment"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:name="com.tinker.balancesheet.OneFragment"
+                android:name="graphitragment"
                 android:layout_below="@+id/btnSpeak"
                 tools:layout="@layout/one_fragment" />
         -->
