Added methods to get user input for table information. Added Parcelable methods

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,9 +51,97 @@
                 android:text="@string/select_account_desc"
                 android:layout_below="@+id/select_account_btn"
                 android:layout_alignLeft="@+id/select_account_btn_icon"
-                android:layout_alignStart="@+id/select_account_btn_icon" />
+                android:layout_alignStart="@+id/select_account_btn_icon"
+                android:id="@+id/select_account_explanation" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Selected Account"
+                android:id="@+id/selected_account_field_title"
+                android:paddingTop="10dp"
+                android:textSize="14dp"
+                android:layout_below="@+id/select_account_explanation" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="None"
+                android:id="@+id/selected_account"
+                android:layout_alignTop="@+id/selected_account_field_title"
+                android:layout_toEndOf="@+id/selected_account_field_title"
+                android:layout_marginLeft="20dp"
+                android:paddingTop="10dp"
+                android:textSize="14dp" />
+            <TextView
+                android:id="@+id/input_table_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Input Table Name"
+                android:layout_below="@+id/selected_account_field_title"
+                android:layout_alignParentStart="true"
+                android:paddingTop="10dp"
+                android:textSize="14dp" />
+            <EditText
+                android:id="@+id/table_name_input_field"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:layout_alignTop="@+id/input_table_name"
+                android:layout_toEndOf="@+id/input_table_name"
+                android:layout_marginLeft="40dp" />
+
+            <TextView
+                android:id="@+id/input_row_number_field_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Input Row Number"
+                android:layout_below="@+id/input_table_name"
+                android:layout_alignParentStart="true"
+                android:paddingTop="10dp"
+                android:textSize="14dp" />
+            <EditText
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/row_number_input_field"
+                android:inputType="number"
+                android:layout_alignTop="@+id/input_row_number_field_title"
+                android:layout_marginLeft="20dp"
+                android:layout_alignEnd="@+id/table_name_input_field" />
+
+            <TextView
+                android:id="@+id/input_col_number_field_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Input Column Number"
+                android:layout_below="@+id/input_row_number_field_title"
+                android:layout_alignParentStart="true"
+                android:paddingTop="10dp"
+                android:textSize="14dp" />
+            <EditText
+                android:id="@+id/col_number_input_field"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:layout_alignTop="@+id/input_col_number_field_title"
+                android:layout_marginLeft="20dp"
+                android:layout_alignEnd="@+id/table_name_input_field" />
 
 
+            <Button
+                android:id="@+id/show_chart_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/select_account_btn_icon"
+                android:text="Show Chart"
+                android:layout_gravity="center_horizontal"
+                android:background="#2490fb"
+                android:textColor="#ffffff"
+                android:padding="5dp"
+                android:layout_below="@+id/col_number_input_field"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="10dp"
+                android:typeface="monospace"
+                android:textStyle="bold" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
