--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -167,17 +167,29 @@
                 android:id="@+id/show_chart_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/select_account_btn_icon"
                 android:text="Show Chart"
                 android:layout_gravity="center_horizontal"
                 android:background="#2490fb"
                 android:textColor="#ffffff"
                 android:padding="5dp"
-                android:layout_below="@+id/data_col_number_input_field"
-                android:layout_marginTop="30dp"
-                android:layout_marginBottom="10dp"
                 android:typeface="monospace"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="How To Use"
+                android:layout_gravity="center_horizontal"
+                android:background="@color/button_material_dark"
+                android:textColor="#ffffff"
+                android:id="@+id/manual_button"
+                android:padding="5dp"
+                android:typeface="monospace"
+                android:textStyle="bold"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true" />
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
