--- a/app/src/main/res/layout/input_chart_data.xml
+++ b/app/src/main/res/layout/input_chart_data.xml
@@ -11,12 +11,12 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
         android:layout_gravity="center"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp">
 
@@ -188,11 +188,29 @@
                 android:padding="5dp"
                 android:typeface="monospace"
                 android:textStyle="bold"
+                android:layout_below="@+id/data_col_number_input_field"
+                android:layout_alignParentStart="true" />
+
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:clickable="true"
+                android:src="@drawable/ic_add_circle_outline_black_48dp"
+                android:id="@+id/add_chart_button"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignEnd="@+id/select_account_explanation" />
+
         </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/chart_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 </LinearLayout>
