--- a/app/src/main/res/layout/chart_list_fragment.xml
+++ b/app/src/main/res/layout/chart_list_fragment.xml
@@ -3,8 +3,8 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/darker_gray"
-    android:padding="16dp">
+    android:background="@color/ripple_material_light"
+    android:padding="5dp">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
