--- a/app/src/main/res/layout/chart_list_fragment.xml
+++ b/app/src/main/res/layout/chart_list_fragment.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/ripple_material_light"
+    android:background="@android:color/transparent"
     android:padding="5dp">
 
     <android.support.v7.widget.CardView
@@ -12,7 +12,7 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="3dp">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -22,7 +22,7 @@
                     android:layout_height="wrap_content"
                     android:text="This is fragment No.1"
                     android:textStyle="bold"
-                    android:textSize="30sp"
+                    android:textSize="20sp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentStart="true"
                     android:layout_toStartOf="@+id/delete_chart_button"
@@ -32,7 +32,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/delete_chart_button"
-                    android:src="@drawable/ic_delete_black_48dp"
+                    android:src="@drawable/ic_delete_black_24dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentEnd="true" />
 
@@ -40,7 +40,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/edit_chart_info_button"
-                    android:src="@drawable/ic_edit_black_48dp"
+                    android:src="@drawable/ic_create_black_24dp"
                     android:layout_gravity="right"
                     android:layout_below="@+id/delete_chart_button"
                     android:layout_toEndOf="@+id/chart_fragment_name" />
