--- a/app/src/main/res/layout/chart_list_fragment.xml
+++ b/app/src/main/res/layout/chart_list_fragment.xml
@@ -4,7 +4,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
-    android:padding="5dp">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    >
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -23,6 +24,8 @@
                     android:text="This is fragment No.1"
                     android:textStyle="bold"
                     android:textSize="20sp"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
+                    android:paddingTop="@dimen/activity_vertical_margin"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentStart="true"
                     android:layout_toStartOf="@+id/delete_chart_button"
