--- a/app/src/main/res/layout/input_chart_data.xml
+++ b/app/src/main/res/layout/input_chart_data.xml
@@ -141,7 +141,7 @@
                 android:id="@+id/show_chart_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Finish"
+                android:text="@string/btn_ok"
                 android:layout_gravity="center_horizontal"
                 android:background="#2490fb"
                 android:textColor="#ffffff"
